Fix footer floating in the middle of the page rather than aligning to bottom of page.

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -128,7 +128,7 @@
 	color: white;
 	text-align: center;
 	vertical-align: bottom;
-	position: relative;
+	position: absolute;
 	bottom: 0;
 }
 
